objects/QIDC__OM_Object_Mapping_ims__c.object
<CustomObject>
    <description>Defines mappings between Org Manger entities and SFDC Objects (SObject)</description>
    <fields>
        <fullName>QIDC__OM_Entity_ims__c</fullName>
        <description>The name of the OneKey entity type.</description>
        <label>Org Manager Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee_API</fullName>
                </value>
                <value>
                    <fullName>Employee_Address_API</fullName>
                </value>
                <value>
                    <fullName>Employee_Communication_API</fullName>
                </value>
                <value>
                    <fullName>Sales_Area_API</fullName>
                </value>
                <value>
                    <fullName>Sales_Area_Relation_API</fullName>
                </value>
                <value>
                    <fullName>Product_API</fullName>
                </value>
                <value>
                    <fullName>Product_Relation_API</fullName>
                </value>
                <value>
                    <fullName>Product_Lot_API</fullName>
                </value>
                <value>
                    <fullName>Product_Sales_Force_API</fullName>
                </value>
                <value>
                    <fullName>Product_Inclusion_API</fullName>
                </value>
                <value>
                    <fullName>Product_Exclusion_API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Parent_Entity_ims__c</fullName>
        <description>Stores relationships to other entities.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Stores relationships to other entities.</inlineHelpText>
        <label>Parent Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__SObjectType_ims__c</fullName>
        <description>The API Name of the SObject type.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The API Name of the SObject type.</inlineHelpText>
        <label>Salesforce Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Org Manager Object Mapping</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <columns>NAME</columns>
        <columns>QIDC__OM_Entity_ims__c</columns>
        <columns>QIDC__Parent_Entity_ims__c</columns>
        <columns>QIDC__SObjectType_ims__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Org Manager Object Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Manager Object Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>